# fpcalc-android

./: LICENSE.md  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/audio/: ffmpeg_audio_processor.h  ffmpeg_audio_reader.h
app/libs/include/libavutil/: ffversion.h
app/src/androidTest/java/com/geecko/fpcalc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fpcalc.cpp  fpcalc_jni.cpp  jni_utils.c  jni_utils.cpp
app/src/main/java/com/geecko/fpcalc/: FpCalc.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/geecko/fpcalc/: ExampleUnitTest.java
fpcalc-android/: CMakeLists.txt  build.gradle
fpcalc-android/libs/include/utils/: scope_exit.h
fpcalc-android/src/main/: AndroidManifest.xml
fpcalc-android/src/main/java/com/geecko/fpcalc/: FpCalc.java
fpcalc-android/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
